ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/Loan_Application_Transaction_History__c.object-meta.xml
<CustomObject>
    <description>created for tackling lead assignments would be used.</description>
    <label>Loan Application Transaction History</label>
    <nameField>
        <label>Loan Application Transaction History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Application Transactions History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>