ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/Application_Journey_Level__c.field-meta.xml
<CustomField>
    <fullName>Application_Journey_Level__c</fullName>
    <label>Application Journey Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>