ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/Assignment_status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_status__c</fullName>
    <label>Assignment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>