ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/Current_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transactions_History_Current_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>