ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/Deal_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Number</label>
    <referenceTo>Deal_Number__c</referenceTo>
    <relationshipLabel>Loan Application Transactions History</relationshipLabel>
    <relationshipName>Loan_Application_Transactions_History</relationshipName>
    <type>Lookup</type>
</CustomField>