ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/IRR__c.field-meta.xml
<CustomField>
    <fullName>IRR__c</fullName>
    <label>IRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>