ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/Loan_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Application</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loan Application Transactions History</relationshipLabel>
    <relationshipName>Loan_Application_Transactions_History</relationshipName>
    <type>Lookup</type>
</CustomField>