ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Stage Name</description>
    <label>Module</label>
    <length>50</length>
    <type>Text</type>
</CustomField>