ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Details</fullName>
            </value>
            <value>
                <fullName>Asset Details</fullName>
            </value>
            <value>
                <fullName>Vehicle Insurance</fullName>
            </value>
            <value>
                <fullName>Vehicle Valuation</fullName>
            </value>
            <value>
                <fullName>Loan Details</fullName>
            </value>
            <value>
                <fullName>Income Details</fullName>
            </value>
            <value>
                <fullName>Final Terms</fullName>
            </value>
            <value>
                <fullName>Insurance Details</fullName>
            </value>
            <value>
                <fullName>FI</fullName>
            </value>
            <value>
                <fullName>Post Sanction Checks and Documentation</fullName>
            </value>
            <value>
                <fullName>Disbursement Request Preparation</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Loan Initiation</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Offer Screen</fullName>
            </value>
            <value>
                <fullName>Existing EMI</fullName>
            </value>
            <value>
                <fullName>Credit Processing</fullName>
            </value>
            <value>
                <fullName>Additional Customer Details</fullName>
                <isActive>false</isActive>
                <label>Additional Customer Details</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>