ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Transaction_History_New_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>