ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/recordTypes/Lead_Assignment.recordType-meta.xml
<RecordType>
    <fullName>Lead_Assignment</fullName>
    <active>true</active>
    <label>Lead Assignment</label>
</RecordType>