ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/recordTypes/Stage_Change.recordType-meta.xml
<RecordType>
    <fullName>Stage_Change</fullName>
    <active>true</active>
    <label>Stage Change</label>
</RecordType>