ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>Screen__c</columns>
    <columns>New_Owner__c</columns>
    <columns>Current_Owner__c</columns>
    <columns>Module__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>