ProdIND/ProdPrograms/force-app/main/default/objects/Loan_Application_Transaction_History__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loan_Application_ID__c</field>
        <operation>equals</operation>
        <value>L21042200075</value>
    </filters>
    <label>All</label>
</ListView>